[feature] 단어 저장 기능 추가

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,6 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <title>Title</title>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <!-- SheetJS CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.14.3/xlsx.full.min.js"></script>
     <script>
         function readExcel() {
@@ -20,21 +19,30 @@
                         let rows = XLSX.utils.sheet_to_json(workBook.Sheets[sheetName]);
                         console.log(JSON.stringify(rows));
 
-                        // document.querySelector('[name="word_list"]').value = JSON.stringify(rows);
+                        document.querySelector('[name="word_list"]').value = JSON.stringify(rows);
                     }
                 });
             };
             reader.readAsBinaryString(input.files[0]);
         }
+
+        function saveWord() {
+            fetch("/upload", {
+                method: "POST",
+                body: JSON.stringify({
+                    wordList: document.querySelector('[name="word_list"]').value
+                }),
+            })
+            .then((response) => response.json())
+            .then((result) => console.log(result));
+        }
     </script>
 </head>
 <body>
-    <form method="post" action="/upload">
-        <input type="hidden" name="word_list" value="한글">
-        <div>
-            <input type="file" onchange="readExcel()">
-            <button type="submit">저장2</button>
-        </div>
-    </form>
+    <input type="hidden" name="word_list">
+    <div>
+        <input type="file" onchange="readExcel()">
+        <button type="button" onclick="saveWord()">저장</button>
+    </div>
 </body>
 </html>
